[gd_scene load_steps=7 format=3 uid="uid://sb21nf2wf7if"]

[ext_resource type="Script" path="res://GameLoop.gd" id="1_g4qhq"]
[ext_resource type="FontFile" uid="uid://cdfafwjg3xnk2" path="res://assets/Don_Quixote.ttf" id="2_exqfm"]
[ext_resource type="FontFile" uid="uid://c1xq7d3mhuvt5" path="res://assets/Guttenbg.ttf" id="3_chick"]

[sub_resource type="LabelSettings" id="LabelSettings_f3vrk"]
font = ExtResource("3_chick")
font_size = 100
font_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4xpe7"]
font = ExtResource("2_exqfm")
font_size = 160
font_color = Color(0.847059, 0.847059, 0.847059, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xem2k"]
font = ExtResource("2_exqfm")
font_size = 160
font_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="Game_loop" type="Node2D"]
script = ExtResource("1_g4qhq")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(800, 800)
color = Color(0.980453, 0.980453, 0.980453, 1)

[node name="Counter" type="Label" parent="Background"]
unique_name_in_owner = true
offset_right = 800.0
offset_bottom = 176.0
text = "372 802 de 372 802"
label_settings = SubResource("LabelSettings_f3vrk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviousWord" type="Label" parent="Background/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 5
text = "pero"
label_settings = SubResource("LabelSettings_4xpe7")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Word" type="Label" parent="Background/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
text = "vuestra"
label_settings = SubResource("LabelSettings_xem2k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="NextWord" type="Label" parent="Background/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Merced"
label_settings = SubResource("LabelSettings_4xpe7")
vertical_alignment = 1

[node name="TestTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="TestTimer" to="." method="_on_test_timer_timeout"]
